# parsec

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE.MIT  README.md
.github/workflows/: windows.yml
include/parserc/: character.h  combinator.h  monadic.h  token.h  trait.h
tests/: CMakeLists.txt
tests/unittest/: CMakeLists.txt  character.cpp  combinator.cpp
tests/unittest/examples/: ipv4.cpp
